; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kvm/extr_pmu.c_kvm_pmu_read_pmc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kvm/extr_pmu.c_kvm_pmu_read_pmc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_vcpu = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.kvm_pmu }
%struct.kvm_pmu = type { i32, i32, %struct.kvm_pmc*, %struct.kvm_pmc* }
%struct.kvm_pmc = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kvm_pmu_read_pmc(%struct.kvm_vcpu* %0, i32 %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.kvm_vcpu*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64*, align 8
  %8 = alloca %struct.kvm_pmu*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.kvm_pmc*, align 8
  %12 = alloca i64, align 8
  store %struct.kvm_vcpu* %0, %struct.kvm_vcpu** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64* %2, i64** %7, align 8
  %13 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %5, align 8
  %14 = getelementptr inbounds %struct.kvm_vcpu, %struct.kvm_vcpu* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  store %struct.kvm_pmu* %15, %struct.kvm_pmu** %8, align 8
  %16 = load i32, i32* %6, align 4
  %17 = and i32 %16, -2147483648
  store i32 %17, i32* %9, align 4
  %18 = load i32, i32* %6, align 4
  %19 = and i32 %18, 1073741824
  store i32 %19, i32* %10, align 4
  %20 = load i32, i32* %6, align 4
  %21 = and i32 %20, 1073741823
  store i32 %21, i32* %6, align 4
  %22 = load i32, i32* %10, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %31, label %24

24:                                               ; preds = %3
  %25 = load i32, i32* %6, align 4
  %26 = load %struct.kvm_pmu*, %struct.kvm_pmu** %8, align 8
  %27 = getelementptr inbounds %struct.kvm_pmu, %struct.kvm_pmu* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = icmp uge i32 %25, %28
  br i1 %29, label %30, label %31

30:                                               ; preds = %24
  store i32 1, i32* %4, align 4
  br label %66

31:                                               ; preds = %24, %3
  %32 = load i32, i32* %10, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %41

34:                                               ; preds = %31
  %35 = load i32, i32* %6, align 4
  %36 = load %struct.kvm_pmu*, %struct.kvm_pmu** %8, align 8
  %37 = getelementptr inbounds %struct.kvm_pmu, %struct.kvm_pmu* %36, i32 0, i32 1
  %38 = load i32, i32* %37, align 4
  %39 = icmp uge i32 %35, %38
  br i1 %39, label %40, label %41

40:                                               ; preds = %34
  store i32 1, i32* %4, align 4
  br label %66

41:                                               ; preds = %34, %31
  %42 = load i32, i32* %10, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %48

44:                                               ; preds = %41
  %45 = load %struct.kvm_pmu*, %struct.kvm_pmu** %8, align 8
  %46 = getelementptr inbounds %struct.kvm_pmu, %struct.kvm_pmu* %45, i32 0, i32 3
  %47 = load %struct.kvm_pmc*, %struct.kvm_pmc** %46, align 8
  br label %52

48:                                               ; preds = %41
  %49 = load %struct.kvm_pmu*, %struct.kvm_pmu** %8, align 8
  %50 = getelementptr inbounds %struct.kvm_pmu, %struct.kvm_pmu* %49, i32 0, i32 2
  %51 = load %struct.kvm_pmc*, %struct.kvm_pmc** %50, align 8
  br label %52

52:                                               ; preds = %48, %44
  %53 = phi %struct.kvm_pmc* [ %47, %44 ], [ %51, %48 ]
  store %struct.kvm_pmc* %53, %struct.kvm_pmc** %11, align 8
  %54 = load %struct.kvm_pmc*, %struct.kvm_pmc** %11, align 8
  %55 = load i32, i32* %6, align 4
  %56 = zext i32 %55 to i64
  %57 = getelementptr inbounds %struct.kvm_pmc, %struct.kvm_pmc* %54, i64 %56
  %58 = call i64 @read_pmc(%struct.kvm_pmc* %57)
  store i64 %58, i64* %12, align 8
  %59 = load i32, i32* %9, align 4
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %61, label %63

61:                                               ; preds = %52
  %62 = load i64, i64* %12, align 8
  store i64 %62, i64* %12, align 8
  br label %63

63:                                               ; preds = %61, %52
  %64 = load i64, i64* %12, align 8
  %65 = load i64*, i64** %7, align 8
  store i64 %64, i64* %65, align 8
  store i32 0, i32* %4, align 4
  br label %66

66:                                               ; preds = %63, %40, %30
  %67 = load i32, i32* %4, align 4
  ret i32 %67
}

declare dso_local i64 @read_pmc(%struct.kvm_pmc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
